--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -18,7 +18,7 @@
         required: false, label: false
 
   #sport_fields
-    = render "#{@game.team.sport_type}_form", game: @game if @game.team && @game.opponent
+    = render "games/#{@game.team.sport_type}/form", game: @game if @game.team && @game.opponent
 
   = f.submit 'Add Box Score', class: 'medium button'
 
