--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,6 @@
-.nine.columns
-  %h1 Welcome to [Box]Score
-  %h5 The place for all of New York's high school sports scores
+%h1
+  Welcome to
+  %strong Box Score,
+  your place for all of New York's
+  %strong high school sports scores and standings.
+  Check the latest scores below:
