--- a/app/views/games/baseball/_form.html.haml
+++ b/app/views/games/baseball/_form.html.haml
@@ -1,6 +1,11 @@
 = field_set_tag 'Player Stats' do
-  = render 'games/baseball/player_stats', team: game.team
-  = render 'games/baseball/player_stats', team: game.opponent
+  %h2 Position Players
+  = render 'games/baseball/position_player_stats', game: game, team: game.team
+  = render 'games/baseball/position_player_stats', game: game, team: game.opponent
+
+  %h2 Pitchers
+  = render 'games/baseball/pitcher_stats', game: game, team: game.team
+  = render 'games/baseball/pitcher_stats', game: game, team: game.opponent
 
 = field_set_tag 'Game Stats' do
   %table.game-stats
@@ -22,6 +27,10 @@
         %th E
 
     %tbody
+      = render 'games/baseball/game_stats', game: game, team: game.team
+      = render 'games/baseball/game_stats', game: game, team: game.opponent
+
+    -#%tbody
       %tr.period-scores
         %td.team-name= game.team.school.name
 
