Fixed basketball box score stats params

--- a/app/views/games/basketball/_game_stats.html.haml
+++ b/app/views/games/basketball/_game_stats.html.haml
@@ -3,8 +3,8 @@
 
   - %w{1 2 3 4}.each do |period|
     %td.period
-      = text_field_tag game_stats_period_field(game.team, period),
-          game.stats.team_stats(game.team_id).points(period),
+      = text_field_tag game_stats_period_field(team, period),
+          game.stats.team_stats(team.id).points(period),
           maxlength: 3
 
   %td &nbsp;
