--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,6 +45,6 @@
           .twelve.columns
             = yield
 
-            -#-if admin_signed_in?
+            -if admin_signed_in?
               .three.columns.admin-menu
                 = render partial: 'shared/admin_menu'
