--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,3 +4,9 @@
   your place for all of New York's
   %strong high school sports scores and standings.
   Check the latest scores below:
+
+%section#scores-search
+  %h2 Search for Scores
+
+%section#recent-scores
+  %h2 Recent Scores
