--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -11,6 +11,7 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-size: 30px;
   margin-bottom: 20px;
+  color: #fff;
 }
 
 h2 {
@@ -63,7 +64,6 @@ a#branding {
   text-indent: -999em;
 }
 
-
 header.global {
   a {
     display: inline-block;
@@ -97,10 +97,15 @@ nav.global {
   margin-top: 20px;
 }
 
+#main {
+  background: #fff;
+}
+
 #scores-nav {
   position: relative;
   z-index: 3;
   margin-top: 80px;
+  margin-bottom: 50px;
   padding: 3px;
   border: 1px solid #377393;
   @include single-box-shadow(rgba(#333, 0.3), 0, 3px, 3px);
