--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,2 +1,3 @@
-%h1 Game #{@game.id}
-%h2 #{@game.team.display_name} vs #{@game.opponent.display_name}
+%h1 #{@game.team.display_name} vs #{@game.opponent.display_name} #{@game.date}
+
+= render partial: "#{@game.team.sport_type}_box_score", locals: { game: @game }
