--- a/app/views/games/baseball/_pitcher_stats.html.haml
+++ b/app/views/games/baseball/_pitcher_stats.html.haml
@@ -1,9 +1,10 @@
 %table.player-stats.pitchers
-  %caption= team.school.name
+  %caption Pitchers
 
   %thead
     %tr
       %th Player
+      %th Order
       %th IP
       %th H
       %th R
