--- a/app/views/games/baseball/_position_player_stats.html.haml
+++ b/app/views/games/baseball/_position_player_stats.html.haml
@@ -1,9 +1,10 @@
 %table.player-stats.position-players
-  %caption= team.school.name
+  %caption Position Players
 
   %thead
     %tr
       %th Player
+      %th Batting Order
       %th Pos
       %th AB
       %th H
