--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -100,6 +100,7 @@ nav.global {
 
 #main {
   margin-bottom: 30px;
+  border-top: 3px solid $black;
   background: #fff;
   @include single-box-shadow(rgba(#333, 0.3), 3px, 3px, 3px);
 }
