--- a/app/views/games/basketball/_player_game_stat_fields.html.haml
+++ b/app/views/games/basketball/_player_game_stat_fields.html.haml
@@ -3,7 +3,7 @@
     = player_game_stat_fields.collection_select :player_id, team.players,
         :id, :name, { include_blank: true }, class: 'player'
 
-  %td= stats_fields.text_field :position, maxlength: 10
+  %td= stats_fields.text_field :pos, maxlength: 10
   %td= stats_fields.text_field :points, maxlength: 3
   %td= stats_fields.text_field :fg, maxlength: 2
   %td= stats_fields.text_field :fga, maxlength: 2
