--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,7 +1,7 @@
 @import 'compass/css3/border-radius';
 @import 'compass/css3/box-shadow';
 @import 'compass/typography';
-@import 'base';
+@import 'base/colors';
 
 h1, h2, h3, h4, h5 {
   margin-top: 0;
