--- a/app/views/games/baseball/_box_score.html.haml
+++ b/app/views/games/baseball/_box_score.html.haml
@@ -12,9 +12,9 @@
         %th E
 
     %tbody
-      = render 'games/baseball/game_stats_row', game: game, team: game.team
-      = render 'games/baseball/game_stats_row', game: game, team: game.opponent
+      = render 'games/baseball/game_stats_row', game: game, team: game.away_team
+      = render 'games/baseball/game_stats_row', game: game, team: game.home_team
 
 %section#player-stats
-  = render 'games/baseball/player_stats', game: game, team: game.team
+  = render 'games/baseball/player_stats', game: game, team: game.away_team
   = render 'games/baseball/player_stats', game: game, team: game.opponent
