--- a/app/views/games/boys_baseball/index.html.haml
+++ b/app/views/games/boys_baseball/index.html.haml
@@ -2,4 +2,4 @@
 
 #main.brief-scores.twelve.columns
   - ['PSAL', 'CHSAA', 'NYSAISAA'].each do |assn|
-    = render 'games/boys_baseball/latest_assn_games', assn: assn, games: Game::BoysBaseball.latest_by_assn(assn)
+    = render 'games/latest_assn_games', assn: assn, games: Game.latest('Boys Baseball', assn)
