Games/sport/index pages for other sports.
Touched up views styling. Default zero values in game tables.

--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -13,6 +13,10 @@ body.box-score.games {
   #main {
     h2, h3 {
       color: $black;
+
+      input[type='submit'].button {
+        margin: 5px;
+      }
     }
 
     h2 {
