--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -1,25 +1,28 @@
 %h1 Report a new box score
 
-= simple_form_for @game do |f|
-  - if @game.errors.any?
-    %ul.errors
-      = list_of @game.errors.full_messages do |e|
-        = e
+#main
+  .row
+    .eleven.columns.centered
+      = simple_form_for @game do |f|
+        - if @game.errors.any?
+          %ul.errors
+            = list_of @game.errors.full_messages do |e|
+              = e
 
-  = field_set_tag 'Game Information' do
-    = f.input :team_id, collection: teams, label_method: :display_name, include_blank: true
-    = f.input :opponent_id, collection: @game.team.try(:potential_opponents) || [], label_method: :display_name
+        = field_set_tag 'Game Information' do
+          = f.input :team_id, collection: teams, label_method: :display_name, include_blank: true
+          = f.input :opponent_id, collection: @game.team.try(:potential_opponents) || [], label_method: :display_name
 
-    = f.input :date, as: :string, required: false
-    = f.input :site, collection: Site::NAMES, include_blank: false, required: false
+          = f.input :date, as: :string, required: false
+          = f.input :site, collection: Site::NAMES, include_blank: false, required: false
 
-    .inline-radio
-      = f.collection_radio_buttons :home_away, [['home', 'Home'], ['away', 'Away']], :first, :last,
-        required: false, label: false
+          .inline-radio
+            = f.collection_radio_buttons :home_away, [['home', 'Home'], ['away', 'Away']], :first, :last,
+              required: false, label: false
 
-  #sport_fields
+        #sport_fields
 
-  = f.submit 'Save', class: 'medium button'
+        = f.submit 'Save', class: 'medium button'
 
 
 :javascript
