Global styling: background, global nav links, scores

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -1,4 +1,6 @@
+$action-color: #e67625;
 $alert-color: red;
-$eggshell: #efefef;
+$body-background-color: #002e40;
 $black: #151515;
 $body-text-color: #5a5a5a;
+$eggshell: #efefef;
