--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,8 +5,6 @@
   %strong high school sports scores and standings.
   Check the latest scores below:
 
-%section#scores-search
-  %h2 Search for Scores
-
-%section#recent-scores
-  %h2 Recent Scores
+#main.twelve.columns
+  %section#recent-scores
+    %h2 Recent Scores
