--- a/app/views/games/baseball/_game_stats_row.html.haml
+++ b/app/views/games/baseball/_game_stats_row.html.haml
@@ -5,6 +5,7 @@
   - unless brief == true
     - (1..game.stats.periods).each do |period|
       %td= stats.points(period.to_s).to_i
-  %td= stats.final
+  %td
+    %strong= stats.final
   %td= stats.hits
   %td= stats.errors
