--- a/app/views/games/basketball/_game_stats_row.html.haml
+++ b/app/views/games/basketball/_game_stats_row.html.haml
@@ -4,4 +4,5 @@
   %th{ scope: 'row' }= team.school.name
   - (1..game.stats.periods).each do |period|
     %td= stats.points(period.to_s).to_i
-  %td= stats.final
+  %td
+    %strong= stats.final
