--- a/app/views/games/_latest_games_basketball.html.haml
+++ b/app/views/games/_latest_games_basketball.html.haml
@@ -1,5 +1,3 @@
-.row
-%h2= assn
 - if games.length > 0
   - games.each do |game|
     .four.columns
@@ -7,13 +5,15 @@
         %thead
           %tr
             %th Team
-            %th R
-            %th H
-            %th E
+            %th 1
+            %th 2
+            %th 3
+            %th 4
+            %th F
 
         %tbody
-          = render 'games/baseball/game_stats_row', game: game, team: game.away_team, brief: true
-          = render 'games/baseball/game_stats_row', game: game, team: game.home_team, brief: true
+          = render 'games/basketball/game_stats_row', game: game, team: game.away_team
+          = render 'games/basketball/game_stats_row', game: game, team: game.home_team
 
       = link_to 'Box Score', game_path(game), class: 'box-score'
 - else
