--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -105,13 +105,6 @@ nav.global {
   margin-top: 20px;
 }
 
-#main {
-  margin-bottom: 30px;
-  border-top: 3px solid $black;
-  background: #fff;
-  @include single-box-shadow(rgba(#333, 0.3), 3px, 3px, 3px);
-}
-
 #scores-nav {
   position: relative;
   z-index: 3;
@@ -176,5 +169,21 @@ nav.global {
 
   h2 {
     margin-bottom: 4px;
+  }
+}
+
+#main {
+  margin-bottom: 30px;
+  border-top: 3px solid $black;
+  background: #fff;
+  @include single-box-shadow(rgba(#333, 0.3), 3px, 3px, 3px);
+
+  h2, h3 {
+    color: $black;
+  }
+
+  h2 {
+    margin: 40px 0 20px;
+    font-size: 20px;
   }
 }
