--- a/app/views/games/basketball/_box_score.html.haml
+++ b/app/views/games/basketball/_box_score.html.haml
@@ -1,4 +1,4 @@
-#game-stats
+%section#game-stats
   %h2 Game Summary
 
   %table.game-stats
@@ -13,6 +13,6 @@
       = render 'games/basketball/game_stats_row', game: game, team: game.away_team, brief: false
       = render 'games/basketball/game_stats_row', game: game, team: game.home_team, brief: false
 
-#player-stats
+%section#player-stats
   = render 'games/basketball/player_stats', game: game, team: game.away_team
   = render 'games/basketball/player_stats', game: game, team: game.home_team
