--- a/app/views/games/boys_basketball/index.html.haml
+++ b/app/views/games/boys_basketball/index.html.haml
@@ -1,5 +1,8 @@
 %h1 Boys Basketball
 
 #main.brief-scores.twelve.columns
+  %h2 Recent Scores
   - ['PSAL', 'CHSAA', 'NYSAISAA'].each do |assn|
-    = render 'games/latest_assn_games', assn: assn, games: Game.latest('Boys Basketball', assn)
+    .row
+      %h3= assn
+      = render 'games/latest_games_basketball', assn: assn, games: Game.latest_by_sport_assn('Boys Basketball', assn)
