--- a/app/views/games/girls_softball/index.html.haml
+++ b/app/views/games/girls_softball/index.html.haml
@@ -1,5 +1,8 @@
 %h1 Girls Softball
 
 #main.brief-scores.twelve.columns
+  %h2 Recent Scores
   - ['PSAL', 'CHSAA', 'NYSAISAA'].each do |assn|
-    = render 'games/latest_assn_games', assn: assn, games: Game.latest('Girls Softball', assn)
+    .row
+      %h3= assn
+      = render 'games/latest_games_baseball', assn: assn, games: Game.latest_by_sport_assn('Girls Softball', assn)
