--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,32 +8,44 @@
 #main.twelve.columns
   %section#filter-scores
     %h2 Search for Scores
-    = form_tag url_for(params), method: :get do
-      = select_tag 'filter[assn]', options_from_collection_for_select(@assns, :id, :name), class: 'chzn-select', include_blank: true, data: { placeholder: 'School Type' }
-      = select_tag 'filter[league]', options_from_collection_for_select(@leagues, :id, :name), class: 'chzn-select', include_blank: true, data: { placeholder: 'League/Division' }
-      = select_tag 'filter[team]', options_from_collection_for_select(@teams, :id, :display_name), class: 'chzn-select', include_blank: true, data: { placeholder: 'School/Team' }
-      = text_field_tag 'filter[start_date]', nil, class: 'date'
-      = text_field_tag 'filter[end_date]', nil, class: 'date'
+    = simple_form_for @filter, method: :get,
+      url: url_for(params.slice(:controller, :action)) do |f|
 
+      = f.input :assn_id, as: :select, collection: @filter.assn_options,
+        required: false, label: false, input_html: { class: 'chzn-select', data: { placeholder: 'Association' } }
+
+      = f.input :league_id, as: :select, collection: @filter.league_options,
+        required: false, label: false, input_html: { class: 'chzn-select', data: { placeholder: 'League/Division' } }
+
+      = f.input :team_id, as: :select, collection: @filter.team_options,
+        label_method: :display_name, required: false, label: false, input_html: { class: 'chzn-select', data: { placeholder: 'Team' } }
+
+      = f.input :earliest_date, as: :string, required: false,
+        label: false, input_html: { class: 'date' }
+
+      = f.input :latest_date, as: :string, required: false, label: false,
+        input_html: { class: 'date' }
+
+      = f.submit
 
   %section#recent-scores
     %h2 Recent Scores
 
     %h3 Boys Basketball
     .row
-      = render 'games/latest_games_basketball', games: Game.latest_by_sport('Boys Basketball')
+      = render 'games/latest_games_basketball', games: @filter.games.latest_by_sport('Boys Basketball')
 
     %h3 Girls Basketball
     .row
-      = render 'games/latest_games_basketball', games: Game.latest_by_sport('Girls Basketball')
+      = render 'games/latest_games_basketball', games: @filter.games.latest_by_sport('Girls Basketball')
 
     %h3 Boys Baseball
     .row
-      = render 'games/latest_games_baseball', games: Game.latest_by_sport('Boys Baseball')
+      = render 'games/latest_games_baseball', games: @filter.games.latest_by_sport('Boys Baseball')
 
     %h3 Girls Softball
     .row
-      = render 'games/latest_games_baseball', games: Game.latest_by_sport('Girls Softball')
+      = render 'games/latest_games_baseball', games: @filter.games.latest_by_sport('Girls Softball')
 
 :javascript
   $(document).ready(function(){
