--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,3 +1,4 @@
+@import 'compass/css3/inline-block';
 @import 'compass/css3/border-radius';
 @import 'compass/css3/box-shadow';
 @import 'compass/typography';
@@ -42,6 +43,10 @@ select {
 
 input.hasDatepicker {
   width: 100px;
+}
+
+input.button {
+  font-weight: normal;
 }
 
 .inline-radio {
