--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
 
 #main.twelve.columns
   %section#filter-scores
-    %h2 Search for Scores
+    %h2 Filter Scores
     = simple_form_for @filter, method: :get,
       url: url_for(params.slice(:controller, :action)) do |f|
 
@@ -26,10 +26,12 @@
       = f.input :earliest_date, as: :string, required: false,
         label: false, input_html: { class: 'date' }
 
+      %span.to to
+
       = f.input :latest_date, as: :string, required: false, label: false,
         input_html: { class: 'date' }
 
-      = f.submit
+      = f.submit 'Search', class: 'button'
 
   %section#recent-scores
     %h2 Recent Scores
