Refactor latest games views

--- a/app/views/games/_latest_games_baseball.html.haml
+++ b/app/views/games/_latest_games_baseball.html.haml
@@ -1,19 +1,18 @@
 - if games.length > 0
-  - games.each do |game|
-    .four.columns
-      %table.game-stats
-        %thead
-          %tr
-            %th Team
-            %th R
-            %th H
-            %th E
+  %h3= sport
+  .row
+    - games.each do |game|
+      .four.columns
+        %table.game-stats
+          %thead
+            %tr
+              %th Team
+              %th R
+              %th H
+              %th E
 
-        %tbody
-          = render 'games/baseball/game_stats_row', game: game, team: game.away_team, brief: true
-          = render 'games/baseball/game_stats_row', game: game, team: game.home_team, brief: true
+          %tbody
+            = render 'games/baseball/game_stats_row', game: game, team: game.away_team, brief: true
+            = render 'games/baseball/game_stats_row', game: game, team: game.home_team, brief: true
 
-      = link_to 'Box Score', game_path(game), class: 'box-score'
-- else
-  .twelve.columns
-    %p No recent games to display.
+        = link_to 'Box Score', game_path(game), class: 'box-score'
