Move filter form partial

--- a/app/views/shared/_filter_form.html.haml
+++ b/app/views/shared/_filter_form.html.haml
@@ -1,17 +1,17 @@
 %section#filter-scores
   %h2 Filter Scores
-  = simple_form_for @filter, method: :get,
+  = simple_form_for filter, method: :get,
     url: url_for(params.slice(:controller, :action)) do |f|
 
-    = f.input :assn_id, as: :select, collection: @filter.assn_options,
+    = f.input :assn_id, as: :select, collection: filter.assn_options,
       required: false, label: false,
       input_html: { class: 'chzn-select', data: { placeholder: 'School Type' } }
 
-    = f.input :league_id, as: :select, collection: @filter.league_options,
+    = f.input :league_id, as: :select, collection: filter.league_options,
       required: false, label: false,
       input_html: { class: 'chzn-select', data: { placeholder: 'League / Division' } }
 
-    = f.input :team_id, as: :select, collection: @filter.team_options,
+    = f.input :team_id, as: :select, collection: filter.team_options,
       label_method: :display_name, required: false, label: false,
       input_html: { class: 'chzn-select', data: { placeholder: 'Team / School' } }
 
